--- a/about-us.html
+++ b/about-us.html
@@ -16,6 +16,21 @@
     </ul>
     </div>
 
+    <h2>HOW TO LIVE WITHOUT ADEQUATE...</h2>
+
+    <h3>Electricity</h3>
+    <h3>Water</h3>
+    <h3>Food Sources</h3>
+    <h3>Phone Service</h3>
+    <h3>Internet Access</h3>
+    <h3>Heat and Gas Supplies</h3>
+    <h3>Transportation</h3>
+    <h3>News and Information</h3>
+    <h3>Medical Care</h3>
+    <h3>Schools</h3>
+    <h3>Banking Services</h3>
+    <h3>Waste Disposal</h3>
+
     <script src='js/scrollReveal.js'></script>
     <script>
       window.sr = new scrollReveal();
