--- a/page2.html
+++ b/page2.html
@@ -17,5 +17,36 @@
     </ul>
     </div>
 
+
+  <!-- Description of the usage of the page -->
+    <h2> How to use this page <h2>
+    <p>
+      This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
+    </p>
+
+    <!-- Image of the prep page 2 goes here -->
+
+  <!-- User input form -->
+  <section>
+    <p>
+      <form action=''>
+        <p>Please select an option(s)</p>
+        <select name='Personalized_Options' size='3' multiple="multiple">
+          <option value="house">I have a house.</option>
+          <option value="apartment">I have an apartment.</option>
+          <option value="drive">I drive to work.</option>
+        </select>
+      </form>
+
+    </p>
+  </section>
+
+  <section>
+    <!-- List of preparations go here -->
+    <span id='customPrepList'></span>
+
+  </section>
+
+    <script src='js/page2.js' type="text/javascript"></script>
   </body>
 </html>
