added list of 5, and place holder for random tip text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
 
     <h1 data-sr="enter top, hustle 50px over 2s">PREPARE YO-SELF</h1>
 
+    <div>
+      <h2>How to prepare for an Earthquake in the Puget Sound Region:</h2>
+      <ul>
+        <li>React Safely</li>
+        <li>Take Cover</li>
+        <li>Survive on Your Own</li>
+        <li>Stay in Contact</li>
+        <li>Care for People, Pets, and Property</li>
+      </ul>
+    </div>
+
+    <div>
+      <p>Please continue to Page 2 to create your own personal preparation list.</p>
+    </div>
+
+    <div>
+      <p>Placeholder for tip of the day/"Did you know..." section.</p>
+    </div>
+
     <script src='js/scrollReveal.js'></script>
     <script>
       window.sr = new scrollReveal();
