added skeleton.css and worked on about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>About Us</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/skeleton.css">
   </head>
 
   <body>
-
     <div id="navBar">
     <ul>
       <li><a href="index.html">HOME</a></li>
@@ -15,6 +16,17 @@
       <li class="activePage"><a href="about-us.html">ABOUT US</a></li>
     </ul>
     </div>
+
+    <br/>
+    <br/>
+    <br/>
+
+    <article class="bio">
+      <div class="bioImage"><img class="bioImage" src="img/aaron.png"/></div>
+      <div class="bioImage"><img class="bioImage" src="img/carolyn.png"/></div>
+      <div class="bioImage"><img class="bioImage" src="img/roland.png"/></div>
+      <div class="bioImage"><img class="bioImage" src="img/sabrina.png"/></div>
+    </article>
 
     <script src='js/scrollReveal.js'></script>
     <script>
