fix tod move code from 'About Us' page to the actual 'Page 3'

--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prepare Yo-self</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
@@ -17,8 +16,36 @@
     </ul>
     </div>
 
+    <h2>HOW TO LIVE WITHOUT ADEQUATE...</h2>
 
-
-
+    <h3>Electricity</h3>
+      <a href="http://www.yourownhomestore.com/living-without-electricity-a-hands-on-experience/">A Hands-On Experience</a>
+    <h3>Water</h3>
+      <a href="http://www.yourownhomestore.com/living-without-running-water/">A Practical Guide</a>
+    <h3>Food Sources</h3>
+      <a href="http://emergency.cdc.gov/disasters/foodwater/facts.asp">Keeping Food Safe</a>
+    <h3>Phone Service</h3>
+      <a href="https://www.fcc.gov/emergency-communications-tips">Communicating During an Emergency</a>  
+    <h3>Internet Access</h3>
+      <a href=""></a>    
+    <h3>Heat and Gas Supplies</h3>
+      <a href=""></a>
+    <h3>Transportation</h3>
+      <a href=""></a>
+    <h3>News and Information</h3>
+      <a href=""></a>
+    <h3>Medical Care</h3>
+      <a href=""></a>
+    <h3>Schools</h3>
+      <a href=""></a>    
+    <h3>Banking Services</h3>
+      <a href=""></a>  
+    <h3>Waste Disposal</h3>
+      <a href=""></a>
+    
+    <script src='js/scrollReveal.js'></script>
+    <script>
+      window.sr = new scrollReveal();
+    </script>
   </body>
 </html>
