--- a/about-us.html
+++ b/about-us.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>About Us</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
   <body>
