closed the h2 tag for the How to use this page sentence

--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
 
 
   <!-- Description of the usage of the page -->
-    <h2> How to use this page <h2>
+    <h2> How to use this page </h2>
     <p>
       This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
     </p>
