added hover feature to about-us github links

--- a/about-us.html
+++ b/about-us.html
@@ -21,12 +21,11 @@
 
   <body>
     <h1>ABOUT US</h1>
-
     <article>
-      <div><img class="bioPic" src="img/aaron.png"/><p>Aaron Filson</p><a href="https://github.com/aaronfilson/" target="_blank"><img src="img/githubLogo.svg" width="50"/></a></div>
-      <div><img class="bioPic" src="img/carolyn.png"/><p>Carolyn Robinson</p><a href="https://github.com/carolynworldwide/" target="_blank"><img src="img/githubLogo.svg" width="50"/></a></div>
-      <div><img class="bioPic" src="img/roland.png"/><p>Roland San Nicolas</p><a href="https://github.com/rdsannicolas/" target="_blank"><img src="img/githubLogo.svg" width="50"/></a></div>
-      <div><img class="bioPic" src="img/sabrina.png"/><p>Sabrina Tee</p><a href="https://github.com/sabbyt/" target="_blank"><img src="img/githubLogo.svg" width="50"/></a></div>
+      <div><img class="bioPic" src="img/aaron.png"/><p>Aaron Filson</p><a href="https://github.com/aaronfilson/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
+      <div><img class="bioPic" src="img/carolyn.png"/><p>Carolyn Robinson</p><a href="https://github.com/carolynworldwide/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
+      <div><img class="bioPic" src="img/roland.png"/><p>Roland San Nicolas</p><a href="https://github.com/rdsannicolas/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
+      <div><img class="bioPic" src="img/sabrina.png"/><p>Sabrina Tee</p><a href="https://github.com/sabbyt/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
     </article>
 
     <script src='js/scrollReveal.js'></script>
