updated nav bar

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
-  <body>
-
-    <div id="navBar">
+  <header>
+    <nav id="navBar">
     <ul>
-      <li class="activePage"><a href="index.html">HOME</a></li>
-      <li><a href="page2.html">PAGE 2</a></li>
-      <li><a href="page3.html">PAGE 3</a></li>
-      <li><a href="page4.html">PAGE 4</a></li>
-      <li><a href="about-us.html">ABOUT US</a></li>
+      <li class="activePage"><a href="index.html"><span>HOME</span></a></li>
+      <li><a href="page2.html"><span>PAGE 2</span></a></li>
+      <li><a href="page3.html"><span>PAGE 3</span></a></li>
+      <li><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
-    </div>
+    </nav>
+  </header>
+
+  <body>
 
     <h1 data-sr="enter top, hustle 50px over 2s">PREPARE YO-SELF</h1>
 
