--- a/page3.html
+++ b/page3.html
@@ -6,15 +6,17 @@
 
   <body>
 
-    <div id="navBar">
+  <header>
+    <nav id="navBar">
     <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="page2.html">PAGE 2</a></li>
-      <li class="activePage"><a href="page3.html">PAGE 3</a></li>
-      <li><a href="page4.html">PAGE 4</a></li>
-      <li><a href="about-us.html">ABOUT US</a></li>
+      <li><a href="index.html"><span>HOME</span></a></li>
+      <li><a href="page2.html"><span>PAGE 2</span></a></li>
+      <li class="activePage"><a href="page3.html"><span>PAGE 3</span></a></li>
+      <li><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
-    </div>
+    </nav>
+  </header>
 
     <h2>HOW TO LIVE WITHOUT ADEQUATE...</h2>
 
@@ -25,9 +27,9 @@
     <h3>Food Sources</h3>
       <a href="http://emergency.cdc.gov/disasters/foodwater/facts.asp">Keeping Food Safe</a>
     <h3>Phone Service</h3>
-      <a href="https://www.fcc.gov/emergency-communications-tips">Communicating During an Emergency</a>  
+      <a href="https://www.fcc.gov/emergency-communications-tips">Communicating During an Emergency</a>
     <h3>Internet Access</h3>
-      <a href=""></a>    
+      <a href=""></a>
     <h3>Heat and Gas Supplies</h3>
       <a href=""></a>
     <h3>Transportation</h3>
@@ -37,12 +39,12 @@
     <h3>Medical Care</h3>
       <a href=""></a>
     <h3>Schools</h3>
-      <a href=""></a>    
+      <a href=""></a>
     <h3>Banking Services</h3>
-      <a href=""></a>  
+      <a href=""></a>
     <h3>Waste Disposal</h3>
       <a href=""></a>
-    
+
     <script src='js/scrollReveal.js'></script>
     <script>
       window.sr = new scrollReveal();
