--- a/page4.html
+++ b/page4.html
@@ -7,17 +7,17 @@
 
   <body>
 
-    <div id="navBar">
+  <header>
+    <nav id="navBar">
     <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="page2.html">PAGE 2</a></li>
-      <li><a href="page3.html">PAGE 3</a></li>
-      <li class="activePage"><a href="page4.html">PAGE 4</a></li>
-      <li><a href="about-us.html">ABOUT US</a></li>
+      <li><a href="index.html"><span>HOME</span></a></li>
+      <li><a href="page2.html"><span>PAGE 2</span></a></li>
+      <li><a href="page3.html"><span>PAGE 3</span></a></li>
+      <li class="activePage"><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
-    </div>
-
-
+    </nav>
+  </header>
 
 
   </body>
