--- a/page4.html
+++ b/page4.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prepare Yo-self</title>
+    <title>Communication Plan</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
   <body>
-
   <header>
     <nav id="navBar">
     <ul>
@@ -18,6 +17,43 @@
     </ul>
     </nav>
   </header>
+
+  <article>
+    <h1>A Communication Plan</h1>
+    <p>Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance.</p>
+    <p>Enter your contact information below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</p>
+    <form>
+      <fieldset>
+      <legend>Contact Details</legend>
+      <label>Name:<br/>
+        <input type="text" name="username"maxlength="50" />
+      </label><br/><br/>
+      <label>Age:<br/>
+        <input type="text" name="age" maxlength="2"/>
+      </label><br/><br/>
+      Gender:
+      <input id="female" type="radio" name="gender" value="f">
+      <label for="female">Female</label>
+      <input id="male" type="radio" name="gender" value="m">
+      <label for="male">Male</label><br/><br/>
+      <label>Address:</label><br/>
+        <textarea name="address" cols="50" rows="4"></textarea><br/><br/>
+      <label>Contact Number:
+        <input type="text" name="contactNo"maxlength="10" />
+      </label><br/><br/>
+      <label>Meet Up Locations:</label><br/>
+      <textarea name="extraInfo" cols="50" rows="6">Pick two places to meet up with your family - clearly state a primary and secondary location:
+
+Primary:
+
+Secondary: </textarea><br/><br>
+      <label>Additional Information:</label><br/>
+      <textarea name="extraInfo" cols="50" rows="10">Anything else you want people to know? Enter extra emergency details here.</textarea><br/>
+      <input id="submitButton" type="submit" name="submit" value="Submit" />
+      </fieldset>
+    </form>
+
+  </article>
 
 
   </body>
