--- a/page4.html
+++ b/page4.html
@@ -22,13 +22,13 @@
     <h1>A Communication Plan</h1>
     <p>Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance.</p>
     <p>Enter your contact information below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</p>
-    <form>
+    <form id="commForm">
       <fieldset>
       <legend>Contact Details</legend>
-      <label>Name:<br/>
+      <label id="username">Name:<br/>
         <input type="text" name="username"maxlength="50" />
       </label><br/><br/>
-      <label>Age:<br/>
+      <label for="age">Age:<br/>
         <input type="text" name="age" maxlength="2"/>
       </label><br/><br/>
       Gender:
@@ -36,25 +36,31 @@
       <label for="female">Female</label>
       <input id="male" type="radio" name="gender" value="m">
       <label for="male">Male</label><br/><br/>
-      <label>Address:</label><br/>
+      <label for="address">Address:</label><br/>
         <textarea name="address" cols="50" rows="4"></textarea><br/><br/>
-      <label>Contact Number:
+      <label for="contactNo">Contact Number:
         <input type="text" name="contactNo"maxlength="10" />
       </label><br/><br/>
-      <label>Meet Up Locations:</label><br/>
-      <textarea name="extraInfo" cols="50" rows="6">Pick two places to meet up with your family - clearly state a primary and secondary location:
+      <label for="meetUpLoc">Meet Up Locations:</label><br/>
+      <textarea name="meetUpLoc" cols="50" rows="6">Pick two places to meet up with your family - clearly state a primary and secondary location:
 
 Primary:
 
 Secondary: </textarea><br/><br>
-      <label>Additional Information:</label><br/>
+      <label for="extraInfo">Additional Information:</label><br/>
       <textarea name="extraInfo" cols="50" rows="10">Anything else you want people to know? Enter extra emergency details here.</textarea><br/>
       <input id="submitButton" type="submit" name="submit" value="Submit" />
       </fieldset>
     </form>
-
   </article>
 
+  <article>
+    <p>Contact Information:
+      <table id="contactInfo">
+      </table>
+    </p>
+  </article>
 
+  <script type="text/javascript" src="js/communications.js"></script>
   </body>
 </html>
