--- a/page2.html
+++ b/page2.html
@@ -2,52 +2,72 @@
 <html>
   <head>
     <title>Prepare Yo-self</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
-  <header>
-    <nav id="navBar">
-    <ul>
-      <li><a href="index.html"><span>HOME</span></a></li>
-      <li class="activePage"><a href="page2.html"><span>PAGE 2</span></a></li>
-      <li><a href="page3.html"><span>PAGE 3</span></a></li>
-      <li><a href="page4.html"><span>PAGE 4</span></a></li>
-      <li><a href="about-us.html"><span>ABOUT US</span></a></li>
-    </ul>
-    </nav>
-  </header>
-
   <body>
-
+    <header>
+      <nav id="navBar">
+      <ul>
+        <li><a href="index.html"><span>HOME</span></a></li>
+        <li class="activePage"><a href="page2.html"><span>PAGE 2</span></a></li>
+        <li><a href="page3.html"><span>PAGE 3</span></a></li>
+        <li><a href="page4.html"><span>PAGE 4</span></a></li>
+        <li><a href="about-us.html"><span>ABOUT US</span></a></li>
+      </ul>
+      </nav>
+    </header>
   <!-- Description of the usage of the page -->
-    <h2> How to use this page </h2>
-    <p>
-      This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
-    </p>
+    <div class='row'>
+      <div class='six columns'>
+        <h3> How to use this page </h3>
+        <p>
+          This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
+        </p>
+      </div>
+      <div class='six columns'>
+        <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
+      </div>
+    </div>
 
-    <!-- Image of the prep page 2 goes here -->
-
-  <!-- User input form -->
+<br>
   <section>
-    <p>
-      <form action=''>
-        <p>Please select an option(s)</p>
-        <select name='Personalized_Options' size='3' multiple="multiple">
-          <option value="house">I have a house.</option>
-          <option value="apartment">I have an apartment.</option>
-          <option value="drive">I drive to work.</option>
-        </select>
+      <form>
+        <div class='row'>
+          <div class='two columns'>
+          Please select an option(s)
+          </div>
+        </div>
+        <div class='row'>
+          <div class='two columns'>
+            <label for='iHaveAHouse'>I have a house.</label>
+            <input type='checkbox' id='iHaveAHouse' >
+          </div>
+          <div class='two columns'>
+            <label for='iHaveAnApartment'>I have an apartment.</label>
+            <input type='checkbox' id='iHaveAnApartment' >
+          </div>
+          <div class='two columns'>
+            <label for='iDrive'>I drive to work or school.</label>
+            <input type='checkbox' id='iDrive' >
+          </div>
+          <div class='two columns'>
+            <label for='iRequireMed'>I need medication or a medical device.</label>
+            <input type='checkbox' id='iRequireMed' >
+          </div>
+        </div>
+        <input class="button-primary" type="submit" value="Submit" id='oneButton'>
       </form>
-
-    </p>
   </section>
 
-  <section>
+  <section class='row'>
     <!-- List of preparations go here -->
-    <span id='customPrepList'></span>
+    <span class='column ten' id='customPrepList'></span>
 
   </section>
 
-    <script src='js/page2.js' type="text/javascript"></script>
+    <script src='js/form.js' type="text/javascript"></script>
   </body>
 </html>
