worked on random quick list

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     </div>
 
     <div>
-      <p>Placeholder for tip of the day/"Did you know..." section.</p>
+      <p>Quick Facts:</p>
+      <p id="qlist"></p>
     </div>
 
     <script src='js/scrollReveal.js'></script>
     <script>
       window.sr = new scrollReveal();
     </script>
+    <script src='js/qlist.js'></script>
   </body>
 </html>
