further work on the UserInfo object and starting on the PList object to store personalized lists.

--- a/page2.html
+++ b/page2.html
@@ -28,6 +28,7 @@
         </p>
       </div>
       <div class='six columns'>
+      <!-- From FEMA.gov -->
         <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
       </div>
     </div>
