--- a/page4.html
+++ b/page4.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Communication Plan</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
@@ -27,27 +29,24 @@
       <legend>Contact Details</legend>
       <label>Name:<br/>
         <input id="username" type="text" name="username"maxlength="50" />
-      </label><br/><br/>
+      </label>
       <label>Age:<br/>
         <input id="age" type="text" name="age" maxlength="2"/>
-      </label><br/><br/>
-      Gender:
-      <input id="female" type="radio" name="gender" value="Female">
-      <label for="female">Female</label>
-      <input id="male" type="radio" name="gender" value="Male">
-      <label for="male">Male</label><br/><br/>
-      <label>Address:</label><br/>
-        <textarea id="address" name="address" cols="50" rows="4"></textarea><br/><br/>
+      </label>
+      <label>Gender:<br/>
+        <input id="gender" type="text" name="gender" maxlength="6"/>
+      </label>
+      <label>Address:</label>
+        <textarea id="address" name="address" cols="50" rows="4"></textarea>
       <label>Contact Number:
         <input id="contactNo" type="text" name="contactNo"maxlength="10" />
-      </label><br/><br/>
-      <label>Meet Up Locations</label><br/>
+      </label>
+      <label>Meet Up Locations</label>
       <label>Pick two places to meet up with your family - clearly state a primary and secondary location:</label><br/>
       <textarea id="meetUpLoc" name="meetUpLoc" cols="50" rows="6">Primary:
-
-Secondary: </textarea><br/><br>
-      <label>Additional Information</label><br/>
-      <label>Anything else you want people to know? Enter extra emergency details here:</label><br/>
+Secondary: </textarea>
+      <label>Additional Information</label>
+      <label>Anything else you want people to know? Enter extra emergency details here:</label>
       <textarea name="extraInfo" cols="50" rows="10" id="extraInfo"></textarea><br/>
       <input id="submitButton" type="submit" name="submit" value="Submit" />
       </fieldset>
