modified home page styling using html tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
     <title>Prepare Yo-self</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
@@ -22,7 +29,7 @@
     <h1 data-sr="enter top, hustle 50px over 2s">PREPARE YO-SELF</h1>
 
     <div>
-      <h2>How to prepare for an Earthquake in the Puget Sound Region:</h2>
+      <h5>How to prepare for an Earthquake in the Puget Sound Region:</h5>
       <ul>
         <li>React Safely</li>
         <li>Take Cover</li>
@@ -32,13 +39,17 @@
       </ul>
     </div>
 
-    <div>
-      <p>Please continue to Page 2 to create your own personal preparation list.</p>
-    </div>
+    <hr />
 
     <div>
-      <p>Quick Facts:</p>
-      <p id="qlist"></p>
+      <h6><strong><em>Click <a href="page2.html">here to Page 2</a> to start your own personal preparation list.</em></strong></h6>
+    </div>
+
+    <hr />
+
+    <div>
+      <h6><strong>Quick Facts:</strong></h6>
+      <h6 id="qlist"></h6>
     </div>
 
     <script src='js/scrollReveal.js'></script>
