--- a/page3.html
+++ b/page3.html
@@ -18,9 +18,9 @@
     </nav>
   </header>
     
-    <h1><p>Planning for days/weeks/months of disruption</p></h1>
+    <h1><p>Plan for DAYS/WEEKS/MONTHS of disruptions</p></h1>
 
-      <section class="where-impact"><h2>At Home</h2>
+      <section class="where-impact"><h2>Living Without Home Services</h2>
         <a href="http://www.yourownhomestore.com/living-without-electricity-a-hands-on-experience/">
           <h3>Electricity</h3></a>    
         <a href="http://www.yourownhomestore.com/living-without-running-water/">
@@ -33,7 +33,7 @@
           <h3>Housing</h3></a>
       </section>
     
-      <section class="where-impact"><h2>Connecting With Others</h2>
+      <section class="where-impact"><h2>Reconnecting With The World</h2>
         <a href="https://www.fcc.gov/emergency-communications-tips">
           <h3>Phone Service</h3></a>
         <a href="http://www.foodinsurance.com/join-the-discussion/how-to-live-without-the-internet/">
@@ -43,7 +43,7 @@
 
       </section>
 
-      <section class="where-impact"><h2>Community Services</h2>
+      <section class="where-impact"><h2>Navigating Through Community Chaos</h2>
         <a href="http://webcache.googleusercontent.com/search?q=cache:http://firefightersforgood.org/disaster-preparedness-tips-to-getting-around-after-a-disaster/">
           <h3>Transportation</h3></a>
         <a href="https://www.medicare.gov/what-medicare-covers/getting-care-and-drugs-in-disasters-or-emergencies.html">
