--- a/page4.html
+++ b/page4.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Communication Plan</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
   </head>
 
   <body>
