modified home page styling using html tags

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div>
       <h5>How to prepare for an Earthquake in the Puget Sound Region:</h5>
-      <ul>
+      <ul class="5ListItems">
         <li>React Safely</li>
         <li>Take Cover</li>
         <li>Survive on Your Own</li>
