--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prepare Yo-self</title>
+    <title>Prepare for an Earthquake, with Customized Lists</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,53 +20,53 @@
       </nav>
     </header>
   <!-- Description of the usage of the page -->
-    <div class='row'>
-      <div class='six columns'>
-        <h3> How to use this page </h3>
-        <p>
-          This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
-        </p>
-      </div>
-      <div class='six columns'>
-      <!-- From FEMA.gov -->
-        <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
-      </div>
-    </div>
-
-<br>
-  <section>
-      <form>
+    <section>
+      <div class="container">
         <div class='row'>
-          <div class='two columns'>
-          Please select an option(s)
+          <div class='six columns'>
+            <h3> How to use this page </h3>
+            <p>
+              This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
+            </p>
+          </div>
+          <div class='six columns'>
+          <!-- From FEMA.gov -->
+            <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
           </div>
         </div>
-        <div class='row'>
-          <div class='two columns'>
-            <label for='iHaveAHouse'>I have a house.</label>
-            <input type='checkbox' id='iHaveAHouse' >
+        
+          <div class='row'>
+            <div class='two columns'>
+              Please select an option(s)
+            </div>
           </div>
-          <div class='two columns'>
-            <label for='iHaveAnApartment'>I have an apartment.</label>
-            <input type='checkbox' id='iHaveAnApartment' >
+          <div class='row'>
+            <div class='two columns'>
+              <label for='iHaveAHouse'>I have a house.</label>
+              <input type='checkbox' id='iHaveAHouse' >
+            </div>
+            <div class='two columns'>
+              <label for='iHaveAnApartment'>I have an apartment.</label>
+              <input type='checkbox' id='iHaveAnApartment' >
+            </div>
+            <div class='two columns'>
+              <label for='iDrive'>I drive to work or school.</label>
+              <input type='checkbox' id='iDrive' >
+            </div>
+            <div class='two columns'>
+              <label for='iRequireMed'>I need medication or a medical device.</label>
+              <input type='checkbox' id='iRequireMed' >
+            </div>
           </div>
-          <div class='two columns'>
-            <label for='iDrive'>I drive to work or school.</label>
-            <input type='checkbox' id='iDrive' >
-          </div>
-          <div class='two columns'>
-            <label for='iRequireMed'>I need medication or a medical device.</label>
-            <input type='checkbox' id='iRequireMed' >
-          </div>
-        </div>
-        <input class="button-primary" type="submit" value="Submit" id='oneButton'>
-      </form>
+          <button class="button-primary" type="click" name="Submit" id='oneButton'>
+        
+      </div>
   </section>
 
   <section class='row'>
     <!-- List of preparations go here -->
-    <span class='column ten' id='customPrepList'></span>
-
+    <span class='ten columns' id='customPrepList'></span>
+  
   </section>
 
     <script src='js/form.js' type="text/javascript"></script>
