modified text on index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <hr />
 
     <div>
-      <h6><strong><em>Click <a href="page2.html">here to Page 2</a> to start your own personal preparation list.</em></strong></h6>
+      <h6><strong><em>Click <a href="page2.html">here to Page 2</a> to start your own personal earthquake preparation list.</em></strong></h6>
     </div>
 
     <hr />
