changed title icons, renamed title pages, and repositioned page 3 and page 4

--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
-    <title>Prepare Yo-self</title>
+    <title>Earthquake Preparation List</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
