--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
-    <title>ABOUT US</title>
+    <title>About Us</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
