--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="img/mountains.png">
 
   <head>
-    <title>Prepare Yo-self</title>
+    <title>Prepare Yo-self Home</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -42,7 +42,7 @@
     <hr />
 
     <div>
-      <h6><strong><em>Click <a href="page2.html">here to Page 2</a> to start your own personal earthquake preparation list.</em></strong></h6>
+      <h6>Click <a href="page2.html">here to Page 2</a> to start your own personal earthquake preparation list.</h6>
     </div>
 
     <hr />
