--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
     <title>ABOUT US</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
