--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
     <title>Prepare Yo-self</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -22,10 +27,8 @@
   <!-- Description of the usage of the page -->
     <div class='row'>
       <div class='six columns'>
-        <h3> How to use this page </h3>
-        <p>
-          This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.
-        </p>
+        <h5> How to use this page </h5>
+        <h6>This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.</h6>
       </div>
       <div class='six columns'>
       <!-- From FEMA.gov -->
