--- a/page4.html
+++ b/page4.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-
 <html>
+
+  <!-- Pageicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/mountains.png">
+
   <head>
     <title>Communication Plan</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -23,9 +27,9 @@
   </header>
 
   <article>
-    <h1>A Communication Plan</h1>
-    <p>Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance.</p>
-    <p>Enter your contact information below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</p>
+    <h5>A Communication Plan</h5>
+    <h6>Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance.</h6>
+    <h6>Enter your contact information below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</h6>
     <form id="commForm">
       <fieldset>
       <legend>Contact Details</legend>
