--- a/page3.html
+++ b/page3.html
@@ -38,9 +38,9 @@
   <br>  
       <section class="where-impact"><h2>Reconnecting With The World</h2>
         <a href="https://www.fcc.gov/emergency-communications-tips">
-          <h3>Phone Service</h3></a>
+          <h3>Phone Service</a>: Cell networks can break down quickly.  But what if you're faced with days or weeks without coverage?</h3>
         <a href="http://www.foodinsurance.com/join-the-discussion/how-to-live-without-the-internet/">
-          <h3>Internet Access</h3></a>           
+          <h3>Internet Access</a>: How to cope when the Internet goes out - not just for hours, but for the foreseeable future? </h3>           
         <a href="http://www.whathappensnow.com/articles_show.cfm?id=64&cat=4&sub=5">
           <h3>News and Information</h3></a>
       </section>
