--- a/page3.html
+++ b/page3.html
@@ -38,24 +38,24 @@
   <br>
       <section class="where-impact"><h2>Reconnecting With The World</h2>
         <a href="https://www.fcc.gov/emergency-communications-tips">
-          <h3>Phone Service</h3></a>
+          <h3>Phone Service</a>: Cell networks can break down quickly.  But what if they stay out for days or weeks?</h3>
         <a href="http://www.foodinsurance.com/join-the-discussion/how-to-live-without-the-internet/">
-          <h3>Internet Access</h3></a>
+          <h3>Internet Access</a>: How to connect in a disconnected new world?</h3>
         <a href="http://www.whathappensnow.com/articles_show.cfm?id=64&cat=4&sub=5">
-          <h3>News and Information</h3></a>
+          <h3>News and Information</a>: Where to get the latest and most accurate media updates in a disaster situation?</h3>
       </section>
     <br>
       <section class="where-impact"><h2>Navigating Through Community Chaos</h2>
         <a href="http://webcache.googleusercontent.com/search?q=cache:http://firefightersforgood.org/disaster-preparedness-tips-to-getting-around-after-a-disaster/">
-          <h3>Transportation</h3></a>
+          <h3>Transportation</a>: What are the best routes to take when major roads and bridges are too dangerous to use?</h3>
         <a href="https://www.medicare.gov/what-medicare-covers/getting-care-and-drugs-in-disasters-or-emergencies.html">
-          <h3>Medical Care</h3></a>
+          <h3>Medical Care</a>: If hospitals are damaged or destroyed, how can you help injury victims?</h3>
         <a href="http://center.serve.org/nche/downloads/dis_hb/parents.pdf">
-          <h3>Schools</h3></a>
+          <h3>Schools</a>: When should parents send children back to school, or create new alternatives?</h3>
         <a href="http://www.redcross.org/find-help/disaster-recovery/recovering-financially">
-          <h3>Banking</h3></a>
+          <h3>Banking</a>: Crucial financial information networks may be blocked or broken.  How can you access your economic data?</h3>
         <a href="http://eecentre.org/DisasterWasteManagementGuidelines.aspx">
-          <h3>Waste Disposal</h3></a>
+          <h3>Waste Disposal</a>: How to safely dispose of trash and sewage when city services fail?</h3>
       </section>
 
     <script src='js/scrollReveal.js'></script>
