--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-  <!-- Pageicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="img/mountains.png">
-
   <head>
     <title>Earthquake Preparation List</title>
+    <!-- Pageicon ––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="img/mountains.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -27,54 +24,61 @@
   <!-- Description of the usage of the page -->
     <section>
       <div class="container">
-    <div class='row'>
-      <div class='six columns'>
-        <h5> How to use this page </h5>
-        <h6>This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.</h6>
+        <div class='row'>
+          <div class='six columns'>
+            <h5> How to use this page </h5>
+            <h6>This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.</h6>
+          </div>
+          <div class='six columns'>
+          <!-- From FEMA.gov -->
+            <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
+          </div>
+        </div>
       </div>
-      <div class='six columns'>
-      <!-- From FEMA.gov -->
-        <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
-      </div>
-    </div>
+    </section>
 
-<br>
-  <section>
-      <form>
+    <section>
+      <div class='container'>
         <div class='row'>
           <div class='two columns'>
-          Please select an option(s)
+            Please select an option(s)
           </div>
+        </div>
         
-          <div class='row'>
-            <div class='two columns'>
-              <label for='iHaveAHouse'>I have a house.</label>
-              <input type='checkbox' id='iHaveAHouse' >
-            </div>
-            <div class='two columns'>
-              <label for='iHaveAnApartment'>I have an apartment.</label>
-              <input type='checkbox' id='iHaveAnApartment' >
-            </div>
-            <div class='two columns'>
-              <label for='iDrive'>I drive to work or school.</label>
-              <input type='checkbox' id='iDrive' >
-            </div>
-            <div class='two columns'>
-              <label for='iRequireMed'>I need medication or a medical device.</label>
-              <input type='checkbox' id='iRequireMed' >
-            </div>
+        <div class='row'>
+          <div class='three columns'>
+            <label for='iHaveAHouse'>I have a house.</label>
+            <input type='checkbox' id='iHaveAHouse' >
           </div>
-          <button class="button-primary" type="click" name="Submit" id='oneButton'>
-        
-      </div>
-  </section>
+          <div class='three columns'>
+            <label for='iHaveAnApartment'>I have an apartment.</label>
+            <input type='checkbox' id='iHaveAnApartment' >
+          </div>
+          <div class='three columns'>
+            <label for='iDrive'>I drive to work or school.</label>
+            <input type='checkbox' id='iDrive' >
+          </div>
+          <div class='three columns'>
+            <label for='iRequireMed'>I need medication or a medical device.</label>
+            <input type='checkbox' id='iRequireMed' >
+          </div>
+        </div>
 
-  <section class='row'>
-    <!-- List of preparations go here -->
-    <span class='ten columns' id='customPrepList'></span>
-  
-  </section>
+        <div class="row">
+          <div class="four columns">
+            <button class="button-primary" type="click" name="Submit" id='oneButton'></button>
+          </div>
+        </div>
+      </div>
+
+      <div class='row'>
+        <div class="ten columns">
+          <span id='customPrepList'></span>
+        </div>
+      </div>
+    </section>
 
     <script src='js/form.js' type="text/javascript"></script>
+  
   </body>
 </html>
