Added reset button to Page 2.

--- a/page2.html
+++ b/page2.html
@@ -67,6 +67,7 @@
         <div class="row">
           <div class="four columns">
             <button class="button-primary" type="click" name="Submit" id='oneButton'></button>
+            <button type='click' name='Reset' id='resetButton'></button>
           </div>
         </div>
       </div>
