added copy to page4.html

--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,8 @@
   <article>
     <h1>A Communication Plan</h1>
     <p>Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance.</p>
-    <p>Enter your contact information below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</p>
+    <p>Prepare a family contact sheet below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.</p>
+    <p>Make sure to include at least one out-of-town contact that may be better able to reach family members in an emergency.</p>
     <form id="commForm">
       <fieldset>
       <legend>Contact Details</legend>
