Added text to page 2 buttons.

--- a/page2.html
+++ b/page2.html
@@ -66,8 +66,8 @@
 
         <div class="row">
           <div class="four columns">
-            <button class="button-primary" type="click" name="Submit" id='oneButton'></button>
-            <button type='click' name='Reset' id='resetButton'></button>
+            <button class="button-primary" type="click" name="Submit" id='oneButton'>Submit</button>
+            <button type='click' name='Reset' value='Reset' id='resetButton'>Reset</button>
           </div>
         </div>
       </div>
