--- a/page3.html
+++ b/page3.html
@@ -17,8 +17,17 @@
     </ul>
     </nav>
   </header>
-    
-    <h1><p>Plan for DAYS/WEEKS/MONTHS of disruptions</p></h1>
+
+  <h1><p>Plan for DAYS/WEEKS/MONTHS of disruptions</p></h1>
+
+        <table align='center'>
+        <tr>
+            <td><img src="img/damagedHomeSized.jpg"></td>
+            <td><img src="img/commsSized.jpg"></td>
+            <td><img src="img/freewaySized.jpg"></td>       
+        </tr>
+    </table>
+  
 
       <section class="where-impact"><h2>Living Without Home Services</h2>
         <a href="http://www.yourownhomestore.com/living-without-electricity-a-hands-on-experience/">
