modified some copy and moved head image to inside head

--- a/about-us.html
+++ b/about-us.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-  <!-- Pageicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="img/mountains.png">
-
   <head>
+    <link rel="icon" type="image/png" href="img/mountains.png">
     <title>About Us</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
@@ -18,7 +15,7 @@
       <li><a href="index.html"><span>HOME</span></a></li>
       <li><a href="page2.html"><span>PAGE 2</span></a></li>
       <li><a href="page3.html"><span>PAGE 3</span></a></li>
-      <li><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li><a href="page4.html"><span>MY PLAN</span></a></li>
       <li class="activePage"><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
     </nav>
