--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-  <!-- Pageicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="img/mountains.png">
-
   <head>
-    <title>Prepare Yo-self Home</title>
+    <link rel="icon" type="image/png" href="img/mountains.png">
+    <title>Prepare Yo-Self</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,7 +15,7 @@
       <li class="activePage"><a href="index.html"><span>HOME</span></a></li>
       <li><a href="page2.html"><span>PAGE 2</span></a></li>
       <li><a href="page3.html"><span>PAGE 3</span></a></li>
-      <li><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li><a href="page4.html"><span>MY PLAN</span></a></li>
       <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
     </nav>
@@ -39,13 +36,13 @@
       </ul>
     </div>
 
-    <hr />
+    <hr/>
 
     <div>
-      <h6>Click <a href="page2.html">here to Page 2</a> to start your own personal earthquake preparation list.</h6>
+      <h6><a href="page2.html">Click here</a> to make your own personal earthquake preparation list.</h6>
     </div>
 
-    <hr />
+    <hr/>
 
     <div>
       <h6><strong>Quick Facts:</strong></h6>
