--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,8 @@
 
 <html>
   <head>
-    <title>Communication Plan</title>
+    <link rel="icon" type="image/png" href="img/mountains.png">
+    <title>My Communication Plan</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -16,7 +17,7 @@
       <li><a href="index.html"><span>HOME</span></a></li>
       <li><a href="page2.html"><span>PAGE 2</span></a></li>
       <li><a href="page3.html"><span>PAGE 3</span></a></li>
-      <li class="activePage"><a href="page4.html"><span>PAGE 4</span></a></li>
+      <li class="activePage"><a href="page4.html"><span> MY PLAN</span></a></li>
       <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
     </nav>
