updated nav bar page names

--- a/page4.html
+++ b/page4.html
@@ -15,8 +15,8 @@
     <nav id="navBar">
     <ul>
       <li><a href="index.html"><span>HOME</span></a></li>
-      <li><a href="page2.html"><span>PAGE 2</span></a></li>
-      <li><a href="page3.html"><span>PAGE 3</span></a></li>
+      <li><a href="page2.html"><span>CHECKLIST</span></a></li>
+      <li><a href="page3.html"><span>LONG TERM</span></a></li>
       <li class="activePage"><a href="page4.html"><span> MY PLAN</span></a></li>
       <li><a href="about-us.html"><span>ABOUT US</span></a></li>
     </ul>
