updated nav bar page names

--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Earthquake Preparation List</title>
-    <!-- Pageicon ––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="img/mountains.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
@@ -14,9 +13,9 @@
       <nav id="navBar">
       <ul>
         <li><a href="index.html"><span>HOME</span></a></li>
-        <li class="activePage"><a href="page2.html"><span>PAGE 2</span></a></li>
-        <li><a href="page3.html"><span>PAGE 3</span></a></li>
-        <li><a href="page4.html"><span>PAGE 4</span></a></li>
+        <li class="activePage"><a href="page2.html"><span>CHECKLIST</span></a></li>
+        <li><a href="page4.html"><span>MY PLAN</span></a></li>
+        <li><a href="page3.html"><span>LONG TERM</span></a></li>
         <li><a href="about-us.html"><span>ABOUT US</span></a></li>
       </ul>
       </nav>
@@ -44,7 +43,7 @@
             Please select an option(s)
           </div>
         </div>
-        
+
         <div class='row'>
           <div class='three columns'>
             <label for='iHaveAHouse'>I have a house.</label>
@@ -80,6 +79,6 @@
     </section>
 
     <script src='js/form.js' type="text/javascript"></script>
-  
+
   </body>
 </html>
