updated styling for page 2 and fixed bugs in page 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="icon" type="image/png" href="img/mountains.png">
-    <title>Prepare Yo-Self</title>
+    <title>Quake Prep</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,10 +23,11 @@
 
   <body>
 
-    <h1 data-sr="enter top, hustle 50px over 2s">PREPARE YO-SELF</h1>
+    <h1>QUAKE PREP</h1>
+    <h1 data-sr="enter top, hustle 50px over 3s">PREPARE YO-SELF</h1>
 
     <div>
-      <h5>How to prepare for an Earthquake in the Puget Sound Region:</h5>
+      <h5>How to prepare for an earthquake in the Puget Sound Region:</h5>
       <ul class="5ListItems">
         <li>React Safely</li>
         <li>Take Cover</li>
