--- a/page2.html
+++ b/page2.html
@@ -22,35 +22,38 @@
     </header>
   <!-- Description of the usage of the page -->
     <section>
+      <h1>My Personalized Checklist</h1>
       <div class="container">
         <div class='row'>
-          <div class='six columns'>
+          <div class='five columns'>
             <h5> How to use this page </h5>
             <h6>This page will allow you to select from a list of options to personalize your preparations. The suggestions for the different situations will give you a detailed list to check and work from.</h6>
           </div>
-          <div class='six columns'>
+          <div class='five columns'>
           <!-- From FEMA.gov -->
-            <img src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
+            <img id = "FEMApic" src='img/preparednow.jpg' alt='Prepared now image' title='You will be the image of preparedness once you start working on these checklists.' />
           </div>
         </div>
       </div>
+      <br/>
     </section>
 
     <section>
       <div class='container'>
         <div class='row'>
-          <div class='two columns'>
-            Please select an option(s)
+          <div class='four columns'>
+            Please select an option(s):
           </div>
         </div>
-
         <div class='row'>
           <div class='three columns'>
             <label for='iHaveAHouse'>I have a house.</label>
+            <br/>
             <input type='checkbox' id='iHaveAHouse' >
           </div>
           <div class='three columns'>
             <label for='iHaveAnApartment'>I have an apartment.</label>
+            <br/>
             <input type='checkbox' id='iHaveAnApartment' >
           </div>
           <div class='three columns'>
