content grammar edits, insert little animation on index.html

--- a/about-us.html
+++ b/about-us.html
@@ -22,7 +22,7 @@
   </header>
 
   <body>
-    <h1>ABOUT US</h1>
+    <h1>About Us</h1>
     <article>
       <div><img class="bioPic" src="img/aaron.png"/><p>Aaron Filson</p><a href="https://github.com/aaronfilson/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
       <div><img class="bioPic" src="img/carolyn.png"/><p>Carolyn Robinson</p><a href="https://github.com/carolynworldwide/" target="_blank"><img src="img/githubLogo.svg" width="50" onmouseover="this.src='img/githubLogo-hover.jpg'" onmouseout="this.src='img/githubLogo.svg'"/></a></div>
