cleaned up code and removed console.logs

--- a/page4.html
+++ b/page4.html
@@ -26,8 +26,8 @@
   <article>
     <h1>A Communication Plan</h1>
     <p class="page4text">Earthquakes can strike at any time and without warning. Friends and families can cope with earthquakes by preparing in advance. Prepare a family contact sheet below and share with friends and family so that in event of an earthquake, you are able to reunite and know each other's emergency plan in advance.
-      <br/>
-      Include at least one out-of-town contact that may be better able to reach family members in an emergency.</p>
+    <br/>
+    Include at least one out-of-town contact that may be better able to reach family members in an emergency.</p>
     <form id="commForm">
       <fieldset>
       <legend>Contact Details</legend>
@@ -47,7 +47,8 @@
       </label>
       <label>Meet Up Locations</label>
       <label>Pick two places to meet up with your family - clearly state a primary and secondary location:</label><br/>
-      <textarea id="meetUpLoc" name="meetUpLoc" cols="50" rows="6">Primary:
+      <textarea id="meetUpLoc" name="meetUpLoc" cols="50" rows="6">
+Primary:
 Secondary: </textarea>
       <label>Additional Information</label>
       <label>Anything else you want people to know? Enter extra emergency details here:</label>
